--- a/dev/scss/components/region/_region_mini.scss
+++ b/dev/scss/components/region/_region_mini.scss
@@ -13,7 +13,7 @@
   letter-spacing: 0.03em;
 
   .has-escort-left & {
-    left: $base-size * 2;
+    left: $base-size * 1.9;
   }
 
   .has-escort-left-icon-only & {
@@ -25,7 +25,7 @@
   }
 
   .has-escort-right & {
-    right: $base-size * 2;
+    right: $base-size * 1.9;
   }
 
   .has-escort-right-icon-only & {
